--- a/HuaShanApp/app/src/main/res/values/strings.xml
+++ b/HuaShanApp/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">HuaShanApp</string>
+    <string name="app_name">华善金融</string>
     <string name="action_settings">Settings</string>
 </resources>
