--- a/HuaShanApp/gesture_lock/src/main/res/values/strings.xml
+++ b/HuaShanApp/gesture_lock/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="use_other_account_login">用其他账号登录</string>
     <string name="set_gesture_pattern">绘制解锁图案</string>
     <string name="set_gesture_pattern_reason">设置手势密码，防止他人未经授权查看</string>
-    <string name="reset_gesture_code">重新设置手势密码</string>
+    <string name="reset_gesture_code">重新设置</string>
     <!-- End -->
 
 </resources>
